examples/good/in/17-02-closure.see
int(int) retLambda() {
    int x = 6;
    return int lambda(int y) => {
        return x + y;
    };
}

void main() {
    int(int) l = retLambda();
    printInt(l(15)); // 21
}