examples/bad/17-01-lambdas.see

void main() {
    void() fun = void lambda(int x) => {
        return 21;
    };

    return;
}